--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Add a new progress bar for local progress -->
     <header class="header">
       <h1>Welcome to KOBIL</h1>
       <p>Identity and Beyond: Discover the KOBIL SuperApp Platform</p>
@@ -26,6 +25,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <div id="verification-status" class="verification-status"></div>
     </header>
     <body>
       <!-- Add a new progress bar for local progress -->
