Refactor app.js to add support for checking the existence of multiple models

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,6 +26,7 @@
         </ul>
       </nav>
       <div id="verification-status" class="verification-status"></div>
+      <ul id="individual-predictions"></ul>
       <div id="model-status" class="model-status"></div>
 
     </header>
