chore: Add model dropdown and update prediction display

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,10 +25,12 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <div id="verification-status" class="verification-status"></div>
-      <ul id="individual-predictions"></ul>
-      <div id="model-status" class="model-status"></div>
-
+      <main id="main-content" style="display: none;">
+        <div id="verification-status" class="verification-status"></div>
+        <select id="model-dropdown" class="model-dropdown"></select>
+        <ul id="individual-predictions"></ul>
+        <div id="model-status" class="model-status"></div>
+    </main>
     </header>
     <body>
       <main>
