Added new Functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,6 +27,7 @@
       </nav>
       <main id="main-content" style="display: none;">
         <div id="verification-status" class="verification-status"></div>
+        <div id="device-name" class="device-name"></div>
         <select id="model-dropdown" class="model-dropdown"></select>
         <ul id="individual-predictions"></ul>
         <div id="model-status" class="model-status"></div>
