Added Database upgrade

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,6 +33,18 @@
         <div id="model-status" class="model-status"></div>
     </main>
     </header>
+    <div id="device-info-form" class="device-info-form">
+      <h2>Geräteinformationen</h2>
+      <form id="device-form">
+        <label for="device-name">Gerätename:</label>
+        <input type="text" id="device-name" name="device-name" required>
+        
+        <label for="operating-system">Betriebssystem:</label>
+        <input type="text" id="operating-system" name="operating-system" required>
+        
+        <button type="submit">Fortfahren</button>
+      </form>
+    </div>
     <body>
       <main>
             <!-- Circular progress bar -->
