--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,16 +33,16 @@
         <div id="model-status" class="model-status"></div>
     </main>
     </header>
-    <div id="device-info-form" class="device-info-form">
-      <h2>Geräteinformationen</h2>
+    <!-- Fügen Sie dies in Ihr HTML-Dokument ein -->
+    <div id="device-info-form" style="display: none;">
       <form id="device-form">
         <label for="device-name">Gerätename:</label>
         <input type="text" id="device-name" name="device-name" required>
-        
+        <br>
         <label for="operating-system">Betriebssystem:</label>
         <input type="text" id="operating-system" name="operating-system" required>
-        
-        <button type="submit">Fortfahren</button>
+        <br>
+        <button type="submit">Absenden</button>
       </form>
     </div>
     <body>
